version/0.16/_sources/api/solver/_autosummary/settings/multicomponent_child.rst.txt
:orphan:

.. _multicomponent_child:

multicomponent_child
====================

.. autoclass:: ansys.fluent.core.solver.settings_232.multicomponent_child.multicomponent_child
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`species_diffusivity_child <species_diffusivity_child>`


.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`multicomponent <multicomponent>`       'multicomponent' child.

======================================   ===========================

