version/0.19/_sources/api/solver/_autosummary/settings/multicomponent_child.rst.txt
:orphan:

.. _multicomponent_child:

multicomponent_child
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.multicomponent_child.multicomponent_child
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`species_diffusivity_child <species_diffusivity_child>`


.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`multicomponent <multicomponent>`       'multicomponent' child.

======================================   ===========================

